Bug 56958 - Spreadsheet Crashes trying to SORT after using and removing SUBTOTALs
Summary: Spreadsheet Crashes trying to SORT after using and removing SUBTOTALs
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.1 rc
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:3.7.0 target:3.6.4 target:6.1.0
Keywords:
Depends on:
Blocks:
 
Reported: 2012-11-10 16:58 UTC by Bill Bruckner
Modified: 2023-04-11 04:52 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
attachment-27184-0.html (2.16 KB, text/html)
2012-11-10 18:27 UTC, Bill Bruckner
Details
attachment-27184-1.dat (1 bytes, multipart/alternative)
2012-11-10 18:27 UTC, Bill Bruckner
Details
2012-11-10 Test File.ods (16.75 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-11-10 18:27 UTC, Bill Bruckner
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Bill Bruckner 2012-11-10 16:58:45 UTC
First I sorted my spreadsheet data.  Then I created subtotals.  I removed the subtotals and tried to sort the spreadsheet using different criteria.  It crashed.  I recovered the spreadsheet, tried it again and it crashed again.  The third time, I recovered the spreadsheet, saved it after removing the subtotals, but it crashed again when I tried to sort it differently.  Finally, I recovered the spreadsheet again.  I had saved it without the subtotals and when I sorted it, it worked.  I can't attach the file because it has sensitive information.
Comment 1 Markus Mohrhard 2012-11-10 17:45:53 UTC
Can you at least try to generate a test document that shows this behavior?

Without a test document we are not able to fix this bug.
Comment 2 Bill Bruckner 2012-11-10 18:27:06 UTC
Created attachment 69873 [details]
attachment-27184-0.html

I can duplicate the problem consistently with the attached file.

 1. I sub-total by Trans Date and sum on Amount.
 2. I remove the Sub-totals by clicking on "Subtotals"  under the "Data"
    menu, selecting "-none-" under "Group by" and unchecking "Amount"
    under "Calculate subotals for"
 3. I try to sort on Post Date and LibreOffice Calc crashes.

Regards,
Bill

On 11/10/2012 11:45 AM, bugzilla-daemon@freedesktop.org wrote:
>
> *Comment # 1 <https://bugs.freedesktop.org/show_bug.cgi?id=56958#c1> 
> on bug 56958 <https://bugs.freedesktop.org/show_bug.cgi?id=56958> from 
> Markus Mohrhard <mailto:markus.mohrhard@googlemail.com> *
> Can you at least try to generate a test document that shows this behavior?
>
> Without a test document we are not able to fix this bug.
> ------------------------------------------------------------------------
> You are receiving this mail because:
>
>   * You reported the bug.
>
Comment 3 Bill Bruckner 2012-11-10 18:27:06 UTC
Created attachment 69874 [details]
attachment-27184-1.dat
Comment 4 Bill Bruckner 2012-11-10 18:27:06 UTC
Created attachment 69875 [details]
2012-11-10 Test File.ods
Comment 5 Markus Mohrhard 2012-11-11 05:28:33 UTC
Looks like a duplicate of Bug 55734. Could you please update to 3.6.2 and check if this fixes your problem.

If so please mark this bug as duplicate of the other one.
Comment 6 Bill Bruckner 2012-11-11 16:46:07 UTC
I updated to 3.6.3.2 from 3.6.2.2, but it still crashes the same way.

Regards,
Bill

On 11/10/2012 11:28 PM, bugzilla-daemon@freedesktop.org wrote:
> Markus Mohrhard <mailto:markus.mohrhard@googlemail.com> changed bug 
> 56958 <https://bugs.freedesktop.org/show_bug.cgi?id=56958>
> What 	Removed 	Added
> CC 		markus.mohrhard@googlemail.com
>
> *Comment # 5 <https://bugs.freedesktop.org/show_bug.cgi?id=56958#c5> 
> on bug 56958 <https://bugs.freedesktop.org/show_bug.cgi?id=56958> from 
> Markus Mohrhard <mailto:markus.mohrhard@googlemail.com> *
> Looks like a duplicate ofBug 55734  <show_bug.cgi?id=55734>. Could you please update to 3.6.2 and check
> if this fixes your problem.
>
> If so please mark this bug as duplicate of the other one.
> ------------------------------------------------------------------------
> You are receiving this mail because:
>
>   * You reported the bug.
>
Comment 7 billhook 2012-11-11 23:27:41 UTC
Confirmed on LO 3.6.3.1 Windows Vista 32bit.

To reproduce the crash

1. Open the test file
2. Data->Subtotals
3. Group by->Trans date
4. Tick 'Calculate subtotals for' -> Amount
5. Click OK
6. Data->Subtotals
7. Group by->-none-
8. Untick 'Calculate subtotals for' -> Amount
9. Click OK
10. Data->Sort
11. Sort key 1->Post Date.
12. Sort key 2->-undefined-
13. Click OK

LibreOffice crashes.

Note: There was one time when I did not reproduce the crash after doing something else first (e.g. calculating slightly different subtotals, sorting slightly differently). However, if I follow the above steps it crashes every time.

I could also reproduce on Win XP LO 3.6.0.1
Comment 8 billhook 2012-11-11 23:52:05 UTC
I just noticed that the suspected duplicate, bug 55734, was fixed in 3.6.3.2.

So I upgraded to 3.6.3.2 and retested.

The bug still occurs exactly as in 3.6.3.1
Comment 9 Markus Mohrhard 2012-11-12 02:44:57 UTC
(In reply to comment #8)
> I just noticed that the suspected duplicate, bug 55734, was fixed in 3.6.3.2.
> 
> So I upgraded to 3.6.3.2 and retested.
> 
> The bug still occurs exactly as in 3.6.3.1

Thanks fixed the problem now. There were all in all two problems that crashed this document. The first one seems to be gracefully ignored in a non dbgutil build.
Comment 10 Not Assigned 2012-11-12 04:29:25 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c45b6496e87fe74570a41821bc5f4fbdb3d3cf8e

only set entries for existing sort entries, related fdo#56958



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 11 Not Assigned 2012-11-12 04:29:42 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=cd545dcf511daedd548c11159b8c244f272e9cb6

make sure that the sort vector is large enough, fdo#56958



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 12 Not Assigned 2012-11-12 12:09:55 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fb1d5fbc36ee33a818477413be9ffe2a9e5f6143&g=libreoffice-3-6

make sure that the sort vector is large enough, fdo#56958


It will be available in LibreOffice 3.6.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 13 Not Assigned 2012-11-12 12:10:14 UTC
Markus Mohrhard committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=7bb3480f5428c5925e5fa11bfdaf7ded784e2976&g=libreoffice-3-6

only set entries for existing sort entries, related fdo#56958


It will be available in LibreOffice 3.6.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 14 Commit Notification 2018-03-07 06:42:52 UTC
Zdeněk Crhonek committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a790ee54319583897d82d4372243df870d4452a6

uitest - calc subtotals; tdf#114720 tdf#88792 tdf#88735 tdf#56958 tdf#55734

It will be available in 6.1.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 15 raal 2019-12-07 19:23:14 UTC
The test exist, set status to Verified.
Comment 16 billchecker.pk 2023-04-10 20:16:50 UTC Comment hidden (spam)