only set entries for existing sort entries, related fdo#56958

Change-Id: Ib48606402fb90b259f705badeac294d7c336cb9c